src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

html {
  scroll-behavior: smooth;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
  --secondary: #059669;
  --card: #ffffff;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  /* Custom colors from Appointwise */
  --color-primary: #07694a;
  --color-secondary: var(--secondary);
  --color-custom-red: #ff4a4a;
  --color-btn: #3ae7b5;
  --color-card: var(--card);
  --color-input: #141414;

  --font-space-grotesk: var(--font-space-grotesk);
  --font-syne: var(--font-syne);
}

.dark {
  --background: #0a0a0a;
  --foreground: #ededed;
  --secondary: #9cfeca;
  --card: #050a07; /* Updated to exceptionally dark tone for uniformity */
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-space-grotesk), ui-sans-serif, system-ui;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-syne), ui-sans-serif, system-ui !important;
}

/* Appointwise Class Utilities */
.btn-primary {
  @apply relative rounded-xl px-6 py-3 text-sm font-semibold text-black transition bg-btn shadow-[0_0_2px_#9cfeca] hover:shadow-[0_0_6px_#9cfeca] hover:brightness-110;
}

.input-primary {
  @apply border border-slate-500 focus:border-primary focus:ring-2 focus:ring-primary/40 focus:outline-none;
}

/* Falling stars animation */
.star-section>span {
  box-shadow:
    0 0 0 4px rgba(255, 255, 255, 0.1),
    0 0 0 8px rgba(255, 255, 255, 0.1),
    0 0 20px rgb(255, 255, 255);
  animation: animateStar linear infinite;
}

.star-section>span::before {
  content: "";
  position: absolute;
  top: 50%;
  width: 300px;
  height: 2px;
  transform: translateY(-50%);
  background: linear-gradient(90deg, #ffffff, transparent);
}

@keyframes animateStar {
  0% {
    transform: rotate(90deg) translateX(0);
  }

  100% {
    transform: rotate(90deg) translateX(-1000px);
  }
}

@keyframes rotateCircle {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

@keyframes counterRotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(-360deg);
  }
}

.spiner {
  animation: rotateCircle 40s linear infinite;
}

.spiner img {
  animation: counterRotate 40s linear infinite;
}

spiner img {
  animation: counterRotate 40s linear infinite;
}

